add_article popup: Make title a text field

--- a/jorne/popup/add_article.html
+++ b/jorne/popup/add_article.html
@@ -5,7 +5,10 @@
         <link rel="stylesheet" href="add_article.css">
     </head>
     <body>
-        <strong id="title"></strong>
+        <div id="header">
+            <input type="text" id="title" placeholder="Title"></input>
+            <input type="submit" id="submit" value="Add"></input>
+        </div>
         <ol id="paragraphs"></ol>
 
         <script src="/browser-polyfill.js"></script>
